# stucco

./: .nvim.lua  Cargo.toml  README.md  rust_out  rust_out.ll  test.ll
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs  visit.rs
crates/ast/src/ast/: mod.rs  print.rs  traits.rs
crates/codegen/: Cargo.toml  build.rs
crates/codegen/examples/: dump_asm.rs  dump_llvm.rs  dump_obj.rs  dump_stencils.rs
crates/codegen/src/: lib.rs  target.rs  types.rs  util.rs  value.rs  wrapper.rs
crates/codegen/src/ir/: expr.rs  method.rs  mod.rs  util.rs
crates/codegen/wrapper/: rust_wrapper.cpp
crates/common/: Cargo.toml
crates/common/src/: error.rs  id.rs  iter.rs  lib.rs  thinvec.rs  u32_vec.rs
crates/common/src/id/: id_set.rs  id_vec.rs  index_map.rs  index_set.rs  mod.rs  range.rs
crates/common/src/render/: format.rs  mod.rs
crates/common/src/test/: mod.rs
crates/common/src/test/string_tests/: test.txt  test2.txt
crates/compiler/: Cargo.toml
crates/compiler/examples/: resolve.rs  type_check.rs
crates/compiler/src/: infer.rs  intrinsics.rs  lib.rs  resolve.rs
crates/compiler/src/infer/: mod.rs  pass.rs  print.rs
crates/compiler/src/resolve/: mod.rs  print.rs  symbols.rs
crates/compiler/src/resolve/symbols/: mod.rs  pass.rs  print.rs
crates/compiler/src/resolve/types/: mod.rs  pass.rs
crates/compiler/src/type_check/: mod.rs  pass.rs  print.rs
crates/compiler/src/type_check/old/: mod.rs  pass.rs
crates/compiler/tests/: infer.rs  testit.js  text.rs
crates/compiler/tests/check/: add_with_mismatched_type.txt  basic.txt  func_arg.txt  if_different_types.txt  if_not_bool.txt  invalid_annotation.txt  never_coerces_to_bool.txt  simple_assign.txt  stencil_returns_invalid_type.txt
crates/compiler/tests/infer/: basic.txt  simple_assign.txt
crates/compiler/tests/resolve/: basic.txt  declared_later.txt  prefer_function.txt  redeclare_param.txt  stencil.txt
crates/compiler/tests/resolve_symbol/: basic.txt  declared_later.txt  prefer_function.txt  redeclare_function.txt  redeclare_param.txt  shadow_var.txt  stencil.txt
crates/compiler/tests/resolve_type/: duplicate_fields.txt  function_templates.txt  function_templates_redeclare.txt  struct_templates.txt  struct_templates_redeclare.txt  unspecified_type.txt
crates/derive/: .gitignore  Cargo.toml
crates/derive/src/: lib.rs
crates/derive_impl/src/: ast.rs  lib.rs  value.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/error/src/render/: mod.rs  tokens.rs
crates/error/src/render/string/: char_buffer.rs  mod.rs
crates/expand/: Cargo.toml
crates/expand/src/: compile.rs  lib.rs  main.rs
crates/expand/src/expand/: mod.rs
crates/parser/: Cargo.toml  test.rs
crates/parser/examples/: parse.rs
crates/parser/src/: buffer.rs  error.rs  expr.rs  function.rs  kw.rs  lib.rs  prime.rs  stencil.rs  stmt.rs  test.rs  token.rs  ty.rs  util.rs  variant.rs
crates/parser/src/error/: mod.rs  old.rs
crates/parser/src/error/render/: mod.rs
crates/parser/tests/: text.rs
crates/parser/tests/ast/: add.txt  become.txt  empty.txt  if_no_semi.txt  loop_no_semi.txt  simple_variant.txt  while_no_semi.txt
crates/parser/tests/ast/basic/: add.txt  become.txt  definition.txt  empty.txt  function.txt  function_template.txt  if_no_semi.txt  impl.txt  invalid_identifier.txt  loop_no_semi.txt  simple_variant.txt  struct.txt  struct_template.txt  unbalanced_delim.txt  while_no_semi.txt
crates/parser/tests/ast/variants/: variation_const.txt
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs
crates/runner/src/old/: lib.rs  value.rs
crates/stucco/: Cargo.toml
crates/stucco/examples/brainfuck/: brainfuck.stucco  brainfuck_generated.rs  main.rs  old.rs
crates/stucco/examples/brainfuck_import/: brainfuck.stucco  main.rs
crates/stucco/examples/brainfuck_reference/: main.rs
crates/stucco/src/: bytecode.rs  lib.rs  stencil.rs
crates/token/: Cargo.toml
crates/token/src/: buffer.rs  lib.rs  span.rs  token.rs
crates/token/src/token/: lit.rs
derive/: Cargo.toml
derive_impl/: Cargo.toml  build.rs
derive_impl/src/: lib.rs  obj.rs
examples/brainfuck/: main.rs
examples/brainfuck_import/: brainfuck.stucco  main.rs
src/: lib.rs  page.rs
src/old/: lib.rs
test/brainfuck/: bottles.bf
test/stucco/: basic_expression.stucco  ptr_methods.stucco  simple.rs  test.rs
