[workspace]
resolver = "3"
members = [
    "crates/ast",
    "crates/codegen",
    "crates/compiler",
    "crates/parser",
    "crates/expand", 
    "crates/error",
]

[workspace.dependencies]
ast = { path = "./crates/ast", package = "stucco_ast"}
common = { path = "./crates/common", package = "stucco_common"}
compiler = { path = "./crates/compiler", package = "stucco_compiler"}
parser = { path = "./crates/parser", package = "stucco_parser"}
#derive = { path = "./crates/derive", package = "stucco_derive"}
expand = { path = "./crates/expand", package = "stucco_expand" }
token = { path = "./crates/token", package = "stucco_token" }
codegen = { path = "./crates/codegen", package = "stucco_codegen" }
error = { path = "./crates/error", package = "stucco_error" }

quote = "1.0.36"
proc-macro2 = "1.0.86"
hashbrown = {version = "0.14.5"}
inkwell = { version = "0.6.0" }
llvm-sys = { version = "181.2" }

