[package]
name = "stucco-ast"
version = "0.1.0"
edition = "2021"

[features]
print = ["syn/extra-traits"]
span-locations = ["proc-macro2/span-locations"]
default = ["print"]

[dependencies]
common = { version = "0.1.0", path = "../common", package = "stucco-common" }
proc-macro2 = "1.0.86"
syn = { version = "2.0.72", default-features = false }
