[package]
name = "stucco_ast"
version = "0.1.0"
edition = "2024"

[features]
print = []
span-locations = ["proc-macro2/span-locations"]
default = ["print"]

[dependencies]
common = { workspace = true }
token = { workspace = true }
#syn = { workspace = true, features = ["parsing","printing"] }
proc-macro2 = { workspace = true }
