[package]
name = "stucco_codegen"
version = "0.1.0"
edition = "2024"

[features]
default = ["stand-alone"]
stand-alone = ["inkwell/llvm18-1"]
proc-macro = ["inkwell/llvm18-1-no-llvm-linking"]

[dependencies]
# Workspace dependencies
ast.workspace = true
common.workspace = true
compiler.workspace = true
token.workspace = true

# LLVM bindings
inkwell = { workspace = true, features = ["llvm18-1"] }
llvm-sys.workspace = true
# Object file parsing
object = "0.36.2"


[dev-dependencies]
parser = { workspace = true }

[build-dependencies]
cc = "1.2.25"
