[package]
name = "stucco_codegen"
version = "0.1.0"
edition = "2024"

[features]
#default = ["stand-alone"]
stand-alone = ["inkwell/llvm18-1-force-dynamic", "llvm-sys/force-dynamic"]
proc-macro = ["inkwell/llvm18-1-no-llvm-linking", "llvm-sys/no-llvm-linking"]

[dependencies]
# Workspace dependencies
ast.workspace = true
common.workspace = true
compiler.workspace = true
token.workspace = true

# LLVM bindings
inkwell = { workspace = true }
llvm-sys.workspace = true
# Object file parsing
object = "0.36.2"


[dev-dependencies]
parser = { workspace = true }

[build-dependencies]
cc = "1.2.25"

[[example]]
name = "dump_asm"
path = "examples/dump_asm.rs"
required-features = ["stand-alone"]
