[package]
name = "stucco_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
ast = { workspace = true, features = ["span-locations"] }
bitflags = "2.9.1"
common = { workspace = true }
token = { workspace = true }
#syn = { workspace = true ,default-features = false }

[dev-dependencies]
parser = { workspace = true }
