[package]
name = "stucco_parser"
version = "0.1.0"
edition = "2021"

[features]
span-locations = ["ast/span-locations"]
default = ["span-locations"]

[dependencies]
ast = { workspace = true }
common = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true , default-features = false, features = ["parsing","printing"]}

[dev-dependencies]
ast = { workspace = true, features = ["print"] }
