[package]
name = "stucco_parser"
version = "0.1.0"
edition = "2024"

[features]
default = ["span-locations"]
span-locations = ["ast/span-locations"]
nightly = []

[dependencies]
token = { workspace = true }
ast = { workspace = true }
common = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
ast = { workspace = true, features = ["print"] }
common = { workspace = true, features = ["test"] }
