[package]
name = "stucco_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
parser.workspace = true
ast.workspace = true
compiler.workspace = true
token.workspace = true
codegen = { workspace = true, default-features = false, features = ["proc-macro"] }

