[workspace]

[package]
name = "stucco"
version = "0.1.0"
edition = "2024"

[features]
default = ["object", "derive"]
derive = ["dep:derive"]
object = ["dep:object"]

[dependencies]
derive = { path = "../derive", package = "stucco_derive", optional = true }
object = { version = "0.37.3", optional = true, features = ["write"] }
rustix = { version = "1.1.2", features = ["mm"] }

